--- a/spacy_coptic.ipynb
+++ b/spacy_coptic.ipynb
@@ -25,7 +25,7 @@
         "import spacy_coptic\n",
         "from coptic_nlp import nlp_coptic\n",
         "nlp=spacy_coptic.load(nlp_coptic)\n",
-        "doc=nlp("ⲙⲟⲟϣⲉ ϩⲱⲥ ϣⲏⲣⲉ ⲙ̄ⲡⲟⲩⲟⲉⲓⲛ")\n",
+        "doc=nlp(\"ⲙⲟⲟϣⲉ ϩⲱⲥ ϣⲏⲣⲉ ⲙ̄ⲡⲟⲩⲟⲉⲓⲛ\")\n",
         "import deplacy\n",
         "deplacy.render(doc,WordRight=True)\n",
         "deplacy.serve(doc,port=None)\n",
