--- a/spacy_coptic.ipynb
+++ b/spacy_coptic.ipynb
@@ -18,7 +18,7 @@
       "metadata":{ "colab_type":"code" },
       "source":[
         "!apt install foma-bin\n",
-        "!pip install 'scikit-learn<0.23'\n",
+        "!pip install 'scikit-learn<0.23' 'xgboost<1'\n",
         "!test -d coptic-nlp || git clone --depth=1 https://github.com/CopticScriptorium/coptic-nlp\n",
         "!cd coptic-nlp && test -f bin/foma/foma || ( ln -s /usr/bin/foma /usr/bin/flookup bin/foma ; ln -s . coptic-nlp ; echo Y | python coptic_nlp.py -penmult - )\n",
         "!pip install spacy_coptic\n",
